fixed spacing issue

--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -314,6 +314,7 @@ body {
 	font-family: $default-font;
 	display: flex;
 	flex-direction: column;
+	-webkit-flex-direction: column;
 	font-weight: 400;
 }
 
@@ -347,6 +348,7 @@ header {
 }
 
 #title {
+	top: 10;
 	display: inline-block;
 	font-family: $title-font;
 	font-size: 2.5em;
@@ -356,6 +358,7 @@ header {
 	left: $left-space;	
 	margin: 0;
 	padding: 0;
+	padding-top: 5px;
 	animation-duration: 0.8s;
 
 }
@@ -371,6 +374,7 @@ header {
 	font-family: $title-font;
 	height: 0.8*$header-height;
 	width: 0.8*$header-height;
+	padding-top: 5px;
 	cursor: pointer;
 	transition: fill 0.5s;
 	-webkit-transition: fill 0.5s;
@@ -521,6 +525,7 @@ main {
 #projects {
 	display: flex;
 	flex-direction: column;
+	-webkit-flex-direction: column;
 
 	.project-container {
 		border-bottom: solid 2px $grey;
@@ -551,12 +556,14 @@ main {
 	#projects {
 		display: flex;
 		flex-direction: row;
+		-webkit-flex-direction: row;
 
 		.project-container {
 			flex: 1;
 			padding: 10px;
 			display: flex;
 			flex-direction: column;
+			-webkit-flex-direction: column;
 			border: none;
 		}
 
@@ -568,11 +575,6 @@ main {
 			flex: 1;
 		}
 
-		.project-links{
-			padding-top: 100px;
-			flex: 1;
-		}
-		
 		a {
 			display: block;
 		}
@@ -586,7 +588,6 @@ main {
 #contact-page {
 	background: $blue;
 	color: white;
-	height: 100%;
 	padding: 20px;
 }
 
@@ -700,7 +701,6 @@ footer {
 
 .description {
 	width: 100%;
-	height: 100%;
 }
 
 .contact-info {
